--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ before_install:
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud config set project multi-k8s-236217
+  - gcloud config set compute/zone europe-west2-a
+  - gcloud container clusters get-credentials multi-cluster
