--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,9 +5,16 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
+    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
 spec:
+  tls:
+    - hosts:
+        - kubernetes.yardinternet.nl
+      secretName: kubernetes-yardinternet-nl-tls
   rules:
-    - http:
+    - host: kubernetes.yardinternet.nl
+      http:
         paths: 
           - path: /
             backend:
