--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/ssl-redirect: 'true'
     certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
 spec:
@@ -16,11 +16,11 @@ spec:
     - host: kubernetes.yardinternet.nl
       http:
         paths: 
-          - path: /
+          - path: /?(.*)
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/
+          - path: /api/?(.*)
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
